Fix navbar overlap

--- a/css/shopkin_collector_material.css
+++ b/css/shopkin_collector_material.css
@@ -112,3 +112,7 @@ textarea {
   font-size: inherit;
   margin-top: 12px;
 }
+
+.page {
+  margin-top: 56px;
+}
